Most of home page done

--- a/index.html
+++ b/index.html
@@ -10,14 +10,30 @@
 <body>
     <div class="top">
         <header>Kiran Narine</header>
+        <ul style="list-style: none;">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Goofs.html">Goofs</a></li>
+            <li><a href="Gaffs.html">Gaffs</a></li>
+        </ul>
     </div>
     <div class="picz">
-        <img src="pic1.jpg" alt="pic1">
-        <img src="pic2.jpg" alt="pic2">
-        <img src="pic3.jpg" alt="pic3">
+       <a href="https://tech.cornell.edu/campus/"><img src="pic1.jpg" alt="pic1"></a>
+        <a href="https://en.wikipedia.org/wiki/Queensboro_Bridge"><img src="pic2.jpg" alt="pic2"></a>
+        <a href="https://rioc.ny.gov/302/Tram"><img src="pic3.jpg" alt="pic3"></a>
     </div>
     <div class="aboutSection">
-        <p>Hello, and welcome to my website. This website has so far only been built with HTML and CSS but hopefully later on I'll develop more web development languages.  I'm currently residing in New York City and I am attending School of the Future High School. Most of my time is spent at home on Roosevelt Island (The island shown in those three pictures!) gaming or doing extracurricular programs in the city such as the All Star Code Summer Intensive or doing Kung Fu classes.</p>
+        <p>Hello, and welcome to my website. This website has so far only been built with HTML, CSS, and Javascript but hopefully later on I'll develop more skills in the other web development languages.  I'm currently residing in New York City and I am attending School of the Future High School. Most of my time is spent at home on Roosevelt Island (The island shown in those three pictures! You can also click on the pictures to get redirected to the site of the respective image.) gaming or doing extracurricular programs in the city such as the All Star Code Summer Intensive or doing Kung Fu classes. This website is just here to display my currently okay web dev skills and to also show what I'm about. This home page here will serve to show off my evolving Resumé and this about section where I talk about myself (meta!). I've also included some very epic me-me pages known as "Goofs" and "Gaffs" based off a running joke from one of my favorite youtubers, h3h3productions. Although there is not a general definition to 'Goof' and 'Gaff' I've decided to fill the 'Goof' page with normal memes whille 'Gaff' shall be filled with a bit more *extreme* memes. None of the memes are made or owned by me, just will display some of my favorites.</p>
     </div>
+    <div class="resumE">
+        <a href="https://docs.google.com/document/d/1HZYWHwKPpQuTllfz-lX0pvAKsEAx4KpSgt7jSDPkHc8/edit?usp=sharing">Current Resumé</a>
+    </div>
+    <div class="bottom">
+        <div class="butt-on-xd">
+            <button onclick="xd()">click me!</button>
+            <p id="butt-on-xd"></p>
+        </div>
+        <footer>© 2019 Kiran Narine (besides the pictures, they ain't mine)</footer>
+    </div>
+    <script src="in.js"></script>
 </body>
 </html>
